added links to index.html

--- a/index.html
+++ b/index.html
@@ -37,23 +37,26 @@
 		<p><strong>Scriptwriting and Directing of Original Plays</strong> (2023-)</p>
 		
 			<ul>
-				<li>Ms. Cobley&rsquo;s Hedgehog (2023): <a href="https://youtu.be/IH1Q6iaYIlk">https://youtu.be/IH1Q6iaYIlk</a></li>
-				<li>The Heartstone (2024): <a href="https://youtu.be/OeKP1YXHG1M">https://youtu.be/OeKP1YXHG1M</a></li>
+				<li>A Hedgehog&rsquo;s Life (2023): 
+					<a href="https://youtu.be/IH1Q6iaYIlk">[YouTube]</a>
+					<a href="./Portfolio/Hedgehog Play Script.pdf">[play script]</a></li>
+				<li>The Heartstone (2024): 
+					<a href="https://youtu.be/OeKP1YXHG1M">[YouTube]</a></li>
 				<li>Perfect Heartstone (2025), work in progress, coming in 2025.</li>
 			</ul>
 	
 		<p><strong>Original Fiction</strong> (2024-)</p>
 			
 			<ul>
-				<li>Sun-Wu Miao (2024), mixing characters and stories between Monkey King (Sun-Wu Kong) and Cat Warriors.</li>
+				<li><a href="./Portfolio/Sun-Wu Miao.pdf">Sun-Wu Miao</a> (2024), mixing characters and stories between Monkey King (Sun-Wu Kong) and Cat Warriors.</li>
 			</ul>
 	
 		<p><strong>Music Composition</strong> (2023-)</p>
 			<ul>
-				<li>Ms. Coberly&rsquo;s 47 Hedgehog (2023): First piece.</li>
-				<li>Warm 106.9 (2024): First Barbershop tag!</li>
-				<li>Dive IN! (2024), with clarinet, percussion, piano, and Alto.</li>
-				<li>Swimming in a Swimming Pool (2024), for Alto Voice, Piano, Bb Clarinet, and Percussion.</li>
+				<li><a href="./Portfolio/Ms. Coberlys 47 Hedgehogs.pdf">Ms. Coberly&rsquo;s 47 Hedgehog</a> (2023): First piece.</li>
+				<li><a href="./Portfolio/Warm 1069.pdf">Warm 106.9</a> (2024): First Barbershop tag!</li>
+				<li><a href="./Portfolio/DiveIn.pdf">Dive IN!</a> (2024), with clarinet, percussion, piano, and Alto.</li>
+				<li><a href="./Portfolio/Swimming_in_a_Swimming_Pool.pdf">Swimming in a Swimming Pool</a> (2024), for Alto Voice, Piano, Bb Clarinet, and Percussion.</li>
 			</ul>
 		
     </main>
