Add The Heartstone script

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 					<a href="https://youtu.be/IH1Q6iaYIlk">[YouTube]</a>
 					<a href="./Portfolio/Hedgehog Play Script.pdf">[play script]</a></li>
 				<li>The Heartstone (2024): 
-					<a href="https://youtu.be/OeKP1YXHG1M">[YouTube]</a></li>
+					<a href="https://youtu.be/OeKP1YXHG1M">[YouTube]</a>
+					<a href="./Portfolio/The Heartstone Play Script.pdf">[play script]</a></li>
 				<li>Perfect Heartstone (2025), work in progress, coming in 2025.</li>
 			</ul>
 	
