updated index.html with Three Imperfect Cats

--- a/index.html
+++ b/index.html
@@ -57,9 +57,14 @@
 				<li><a href="./Portfolio/Ms. Coberlys 47 Hedgehogs.pdf">Ms. Coberly&rsquo;s 47 Hedgehog</a> (2023): First piece.</li>
 				<li><a href="./Portfolio/Warm 1069.pdf">Warm 106.9</a> (2024): First Barbershop tag!</li>
 				<li><a href="./Portfolio/DiveIn.pdf">Dive IN!</a> (2024), with clarinet, percussion, piano, and Alto.</li>
-				<li><a href="./Portfolio/Swimming_in_a_Swimming_Pool.pdf">Swimming in a Swimming Pool</a> (2024), for Alto Voice, Piano, Bb Clarinet, and Percussion.</li>
+				<!--<li><a href="./Portfolio/Swimming_in_a_Swimming_Pool.pdf">Swimming in a Swimming Pool</a> (2024), for Alto Voice, Piano, Bb Clarinet, and Percussion.</li>-->
+				<li><a href="./Portfolio/Imperfect_Cats.pdf">Three Imperfect Cats</a> (2024), for Alto Voice, Piano, Bb Clarinet, and Percussion.[<a href="./Portfolio/Imperfect_Cats.mp3">mp3</a>]</li>
+					<ul>
+						<li><i>The theme “Accepting Imperfection” made me think of how I accepted my own imperfections: learned diving, wrote and directed original plays, and solved hard math problems. Even they were not perfect, I kept trying with help from my teacher and from my friends.</i></li>
+						<li><i>I put those stories on cats because I love the book series Warriors with wildcats as main characters.</i></li>
+						<li><i>I have been learning piano, clarinet, and music theory, so I created accompaniment for those instruments and added a key change. I transcribed the music and lyrics in MuseScore and revised them several times.</i></li>
+					</ul>
 			</ul>
-		
     </main>
   </body>
 </html>
